--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
     <header>
       <H2>日本農業気象学会</H2>
       <H1>農業気象を学べる大学</H1>
-      農業気象学とは，農業生産と気象の関係，農耕地における気候，微気象の成り立ち，耕地・施設環境の改善・調節などに
-      関する学問です．<br>
+      農業気象学とは，農業生産と気象の関係，農耕地における気候，微気象の成り立ち，耕地・施設環境の改善・調節などに関する学問です．<br>
 
-      以下は農業気象学の授業がある，もしくは農業気象に関する研究室があり，卒業研究として農業気象に関する研究ができる大学の
-      情報（2024年5月時点）です．<br>
-      リストされている学科等では，通常，農業気象学だけでなく広い分野を学ぶことになります．リンク先の学科等全体の情報も
-      ご確認をお願いします．
+      以下は農業気象学の授業がある，もしくは農業気象に関する研究室があり，卒業研究として農業気象に関する研究ができる大学の情報（2024年5月時点）です．リストされている学科等では，通常，農業気象学だけでなく広い分野を学ぶことになります．リンク先の学科等全体の情報もご確認をお願いします．
     </header>
     <section>
       <article>
