--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <dd><a href="https://www.obihiro.ac.jp/agric-eng-prg">帯広畜産大学　畜産学部　農業環境工学ユニット</a></dd>
             <dt>東北</dt>
               <dd><a href="https://nature.hirosaki-u.ac.jp/">弘前大学　農学生命科学部</a></dd>
-              <dd><a href="https://nature.hirosaki-u.ac.jp/">弘前大学　理工学部</a></dd>
+              <dd><a href="https://www.st.hirosaki-u.ac.jp/~earthenv/index.html">弘前大学　理工学部</a></dd>
                 <dd>　一般的な気象学を学びますが，卒業研究で農業気象分野も対象となります．</dd>
               <dd><a href="https://www.sss.fukushima-u.ac.jp/">福島大学　共生システム理工学類　地球環境コース</a></dd>
               <dd><a href="https://www.akita-pu.ac.jp/bioresource/DBE/index.html">秋田県立大学　生物資源科学部　生物環境科学科</a></dd>
